Update iOS statusbar styles in PWA + Fix home button covered by page title

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -24,6 +24,7 @@
 /********************************************************************************/
 
 :root {
+	--back-margin: 10px;
 	--back-width: 26px;
 
 	--navbar-noshrink: 100px;
